--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 >
                 <span class="fh5co-block">&nbsp;&nbsp; or &nbsp;&nbsp;</span>
                 <a href="#" class="btn btn-primary btn-lg btn-hardbound"
-                >Buku Elektronik <span class="price">RP. 50.000</span></a
+                >Buku Digital <span class="price">RP. 50.000</span></a
               >
               </p>
             </div>
