--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <body>
     <header
       id="fh5co-header"
-      style="background-image: url(images/hero_bg_1.jpg)"
+      style="background-image: url(images/perpus.jpg)"
     >
       <div class="overlay"></div>
       <div class="container">
